--- a/another-maven-project/Jenkinsfile
+++ b/another-maven-project/Jenkinsfile
@@ -4,6 +4,7 @@ pipeline {
 	stage('Maven Compile'){
 		steps{
 			echo 'Project compile stage'
+			cd another-maven-project
 			bat label: 'Compilation running', script: '''mvn compile'''
 	       	}
 	}
@@ -11,6 +12,7 @@ pipeline {
 	stage('Unit Test') {
 	   steps {
 			echo 'Project Testing stage'
+		   	cd another-maven-project
 			bat label: 'Test running', script: '''mvn test'''
 	       
        		}
@@ -18,12 +20,14 @@ pipeline {
 
 	stage('Jacoco Coverage Report') {
         	steps{
+			
             		jacoco()
 		}
 	}
        
        stage('SonarQube'){
 		steps{
+				cd another-maven-project
 				bat label: '', script: '''mvn sonar:sonar \
 				-Dsonar.host.url=http://localhost:4950 \
 				-Dsonar.login=2d1ec4021e5735308a130599522684e3074c7918'''
@@ -32,6 +36,7 @@ pipeline {
 	
 	stage('Maven Package'){
 		steps{
+			cd another-maven-project
 			echo 'Project packaging stage'
 			bat label: 'Project packaging', script: '''mvn package'''
 		}
